Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58488

QWebEngineView popups have wrong window type on X11

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9
    • 5.8.0 RC, 5.8.0
    • WebEngine
    • None
    • Linux X11
    • 7e7dd26251c355a54b5c34ea4fb27dcda9ee7b94

    Description

      Popups at pages (eg. popup of <select> element) have now type _NET_WM_WINDOW_TYPE_UTILITY and state _NET_WM_STATE_DEMANDS_ATTENTION which makes them movable and make the application highlighted in task manager.

      This is regression from Qt 5.7

      Attachments

        For Gerrit Dashboard: QTBUG-58488
        # Subject Branch Project Status CR V

        Activity

          People

            qt_webengine_team Qt WebEngine Team
            nowrep David Rosca
            Votes:
            2 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes