Use Qt::ToolTip as window type for dropdown popus

In 58467ed1950ee070d0907cbdabb8466aba277305, the window type for dropdown popups
was changed from Qt::ToolTip to Qt:Tool to fix issues when using a
QWebEngineView inside a modal dialog on macOS.

However, this causes a separate window to pop up at least under Linux, so we use
Qt::ToolTip again there.

Task-number: QTBUG-58488
Task-number: QTBUG-58544
Change-Id: I951b91980be89a37ee07b19fca684d13b6098af0
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>
Reviewed-by: Michael Brüning <michael.bruning@qt.io>